--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,7 +41,7 @@
 /*@import './base/768';*/
 @import './base/900';
 /*@import './base/1000';*/
-/*@import './base/1024';*/
+@import './base/1024';
 @import './base/1200';
 /*@import './base/1280';*/
 /*@import './base/1440';*/
