--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -1,72 +1,4 @@
-// .mobile-nav {
-// 	&__menu {
-// 		&:has(.mobile-nav--active) {
-// 			transition: 0.7s;
-// 			position: absolute;
-// 			background-color: rgba($color: #1b1b1b, $alpha: 0.5);
-// 			width: 100vw;
-// 			height: 100vh;
-// 		}
-// 	}
-// 	&__wrapper {
-// 		background-color: #fff;
-// 		margin: 0 auto;
-// 		left: 0;
-// 		right: 0;
-// 		top: -100%;
-// 		position: absolute;
-// 		width: 360px;
-// 		text-align: center;
-// 		transition: 0.7s;
-// 	}
 
-// 	&__top {
-// 		padding: 20px;
-// 		display: flex;
-// 		flex-direction: row-reverse;
-// 	}
-// 	&__close-btn {
-// 	}
-// 	&__list {
-// 		font-size: 24px;
-// 		line-height: normal;
-// 	}
-// 	&__item {
-// 		margin-bottom: 30px;
-// 	}
-// 	&__link {
-// 		color: #000;
-// 	}
-// 	&__list-addi {
-
-// 		font-size: 14px;
-// 	}
-// 	&__item-addi {
-// 		margin-bottom: 35px;
-// 	}
-// 	&__link-addi {
-// 		color: #000;
-// 	}
-// 	&__icons {
-// 		background-color: var(--color-descr);
-// 		display: flex;
-// 		padding: 20px 80px;
-// 		justify-content: space-between;
-// 	}
-// 	&__search-link {
-// 	}
-// 	&__tools {
-// 	}
-// 	&__cart-link {
-// 	}
-// 	&__user-link {
-// 	}
-// }
-
-// .svg-icons--cross-dims {
-// 	height: 20px;
-// 	width: 20px;
-// }
 .svg-icons--closeNavBtn-dims {
 	height: 35px;
 	width: 35px;
@@ -82,10 +14,10 @@
 	&__inner {
 		translate:-100%;
 
-		z-index: 1;
+		z-index: 2;
 		transition: 0.7s;
 		position: absolute;
-		background-color: rgba($color: #1b1b1b, $alpha: 1);
+		background-color: rgba($color: #1b1b1b, $alpha: 0.8);
 		width: 100vw;
 		// width: calc(100vw - var(--scrollbar-width));
 		height: 100vh;
@@ -96,15 +28,16 @@
 
 	&__close {
 		position: absolute;
-		top: 24px;
-		right: 24px;
+		top: 13px;
+		right: 10px;
 	}
 	&__close-icon {
 	}
 	&__main {
 		height: 100%;
+		
 		max-width: 80vw;
-		padding: 30px 40px;
+		padding: 17px 14px 17px 30px;
 		background-color: #fff;
 		display: flex;
 		flex-direction: column;
@@ -115,21 +48,32 @@
 	}
 }
 body:has(.mobile-nav--active) {
-	// overflow-y: hidden;
+	overflow-x: hidden;
 	// overflow-y: scroll;
 	// position: fixed;
 }
 .mobile-nav__inner.mobile-nav--active {
 	translate: 0% ;
 }
-@media (min-device-width: 1025px) {
-	// body:has(.mobile-nav--active) {
+@media (min-device-width: 820px) {
+
+	.header:has(.mobile-nav--active) {
+		// margin-left: calc(100vw - 100%);
+		margin-left:calc(var(--scrollbar-width) + 1px) ;
+		// margin-right: 0;
+		
 	// //  overflow-y: hidden;
-	// 	overflow-y: scroll;
+		// overflow-y: scroll;
 	// 	position: fixed;
-	// }
+	}
 	.mobile-nav {
+		&__close {
+			position: absolute;
+			top: 33px;
+			right: 37px;
+		}
 		&__inner {
+			background-color: rgba($color: #1b1b1b, $alpha: 0.7);
 			width: calc(100vw - var(--scrollbar-width));
 			&.mobile-nav--active {
 				width: 100vw;
@@ -140,25 +84,25 @@ body:has(.mobile-nav--active) {
 .nav-logo {
 	display: flex;
 	justify-content: center;
-	margin-bottom: 36px;
+	margin-bottom: 12px;
 }
 .logo-img {
-	height: 124px;
-	width: 124px;
+	height: 76px;
+	width: 76px;
 }
 .mobile-menu {
 	// margin-right: 70px;
 	&__list {
 		display: flex;
 		flex-direction: column;
-		row-gap: 24px;
+		row-gap: 20px;
 	}
 	&__item {
 	}
 	&__link {
 		text-transform: uppercase;
 		font-weight: bold;
-		font-size: 20px;
+		font-size: 16px;
 	}
 	&__text-rus {
 		&::after {
@@ -174,40 +118,44 @@ body:has(.mobile-nav--active) {
 	&__footer {
 	}
 	&__point-info {
-		padding-bottom: 32px;
-		margin-bottom: 24px;
+		padding-bottom: 18px;
+		margin-bottom:16px;
 		border-bottom: solid #d9d9d9 1px;
 	}
 	&__point-work-time {
+		
 		margin-bottom: 16px;
 	}
 
 	&__point-work-time-text {
+		font-size: 14px;
 	}
 	&__point-adress {
 		display: flex;
 		align-items: center;
 	}
 	&__point-adress-text {
+		font-size: 14px;
 		text-decoration-line: underline;
 		text-decoration-style: dashed;
 		text-decoration-thickness: 2px;
 		text-underline-offset: 6px;
 
-		line-height: 30px;
+		line-height: 24px;
 		padding-bottom: 4px;
 		// border-bottom: 2px dashed var(--color-text-dark);
 	}
 	&__phone {
-		margin-bottom: 30px;
+		margin-bottom: 14px;
 	}
 	&__phone-text {
-		font-size: 20px;
+		font-size: 16px;
 	}
 }
 .mobive-nav__to-user > .mobile-nav {
 	&__to-user-account-btn {
 		width: auto;
+		max-width: 250px;
 	}
 }
 .mobive-nav__to-user > .delivery__link > .header__booking-text-rus {
@@ -229,6 +177,8 @@ body:has(.mobile-nav--active) {
 	&__booking-link {
 	}
 	&__booking-text-rus {
+		margin-right: 20px;
+		margin-left: 20px;
 	}
 	&__booking-text {
 	}
