--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -1,72 +1,63 @@
-
 .svg-icons--closeNavBtn-dims {
 	height: 35px;
 	width: 35px;
 }
+
 .svg-header--nav-time-dims,
 .svg-header--nav-map-dims,
 .svg-header--nav-phone-dims {
 	width: 20px;
 	height: 20px;
 }
-.mobile-nav {
-	
-	&__inner {
-		translate:-100%;
 
+.mobile-nav {
+	&__inner {
+		
+		translate:-100%;
 		z-index: 2;
 		transition: 0.7s;
 		position: absolute;
 		background-color: rgba($color: #1b1b1b, $alpha: 0.8);
 		width: 100vw;
-		// width: calc(100vw - var(--scrollbar-width));
 		height: 100vh;
 		&:has(.mobile-nav--active) {
 			display: flex;
 		}
 	}
-
 	&__close {
 		position: absolute;
 		top: 13px;
 		right: 10px;
 	}
-	&__close-icon {
-	}
+
 	&__main {
 		height: 100%;
-		
 		max-width: 80vw;
 		padding: 17px 14px 17px 30px;
 		background-color: #fff;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		
 	}
-	&__head {
-	}
+
 }
+
 body:has(.mobile-nav--active) {
 	overflow-x: hidden;
-	// overflow-y: scroll;
-	// position: fixed;
 }
 .mobile-nav__inner.mobile-nav--active {
 	translate: 0% ;
 }
 @media (min-device-width: 820px) {
 
-	.header:has(.mobile-nav--active) {
-		// margin-left: calc(100vw - 100%);
+	body:has(.mobile-nav--active) {
 		margin-left:calc(var(--scrollbar-width) + 1px) ;
-		// margin-right: 0;
-		
-	// //  overflow-y: hidden;
-		// overflow-y: scroll;
-	// 	position: fixed;
 	}
+
 	.mobile-nav {
+		&__main {
+            margin-left:calc(0px - var(--scrollbar-width)) ;
+        }
 		&__close {
 			position: absolute;
 			top: 33px;
@@ -91,13 +82,10 @@ body:has(.mobile-nav--active) {
 	width: 76px;
 }
 .mobile-menu {
-	// margin-right: 70px;
 	&__list {
 		display: flex;
 		flex-direction: column;
 		row-gap: 20px;
-	}
-	&__item {
 	}
 	&__link {
 		text-transform: uppercase;
@@ -115,18 +103,14 @@ body:has(.mobile-nav--active) {
 	}
 }
 .mobive-nav {
-	&__footer {
-	}
 	&__point-info {
 		padding-bottom: 18px;
 		margin-bottom:16px;
 		border-bottom: solid #d9d9d9 1px;
 	}
 	&__point-work-time {
-		
 		margin-bottom: 16px;
 	}
-
 	&__point-work-time-text {
 		font-size: 14px;
 	}
@@ -140,10 +124,8 @@ body:has(.mobile-nav--active) {
 		text-decoration-style: dashed;
 		text-decoration-thickness: 2px;
 		text-underline-offset: 6px;
-
 		line-height: 24px;
 		padding-bottom: 4px;
-		// border-bottom: 2px dashed var(--color-text-dark);
 	}
 	&__phone {
 		margin-bottom: 14px;
@@ -171,27 +153,4 @@ body:has(.mobile-nav--active) {
 	margin-right: 8px;
 }
 
-.header {
-	&__booking {
-	}
-	&__booking-link {
-	}
-	&__booking-text-rus {
-		margin-right: 20px;
-		margin-left: 20px;
-	}
-	&__booking-text {
-	}
-	&__booking-separator {
-	}
-	&__booking-text-chi {
-	}
-}
-.delivery {
-	&__link {
-	}
-}
-.big {
-	&_button {
-	}
-}
+
