--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -1,3 +1,21 @@
+.slick-prev.slick-arrow.menu-categories__menu-arrow-btn,
+.slick-next.slick-arrow.menu-categories__menu-arrow-btn{
+	position: absolute;
+	top: calc(50% - 14px);
+
+	z-index: 1;
+	height: 28px;
+	width: 28px;
+}
+.slick-next.slick-arrow.menu-categories__menu-arrow-btn{
+
+	right: 2px;
+
+}
+.slick-prev.slick-arrow.menu-categories__menu-arrow-btn{
+	rotate: 180deg;
+left: 2px;
+}
 .section-menu {
 	&__inner {
 		margin-top: 18px;
@@ -74,6 +92,8 @@
 		font-size: 16px;
 	}
 }
+
+
 .menu-categories {
 	position: relative;
 
@@ -93,25 +113,37 @@
 			height: 100%;
 			background-image: linear-gradient(90deg, transparent 0%, #eeeeee 90%);
 		}
+		&::before {
+			content: '';
+			z-index: 1;
+			top: 0;
+			left: 0;
+			display: block;
+			position: absolute;
+			width: 80px;
+			height: 100%;
+			background-image: linear-gradient(90deg, #eeeeee 0%, transparent 90%);
+		}
 	}
 	&__item {
+		z-index: 10;
 		display: flex;
 		flex-shrink: 0;
 		padding: 9px 19px;
-		border-radius: 20px;
-		transition: all 0.2s ease-in-out;
-		&:hover{
-			background-color: #eeeeee;
-		}
+		// border-radius: 20px;
+		// transition: all 0.2s ease-in-out;
+		// &:hover{
+		// 	background-color: #969595;
+		// }
 		}
 	
-	&__item--active {
-		background-color: var(--color-accent);
-		color: var(--color-text-light);
-		&:hover{
-			background-color: var(--color-accent);
-		}
-	}
+	// &__item--active {
+	// 	background-color: var(--color-accent);
+	// 	color: var(--color-text-light);
+	// 	&:hover{
+	// 		background-color: var(--color-accent);
+	// 	}
+	// }
 	&__text-rus {
 		&::after {
 			content: ' / ';
@@ -121,10 +153,24 @@
 		@extend %font-Microsoft-Jhenghei-700;
 	}
 	&__menu-arrow-btn {
-		position: absolute;
-		top: calc(50% - 14px);
-		right: 2px;
-		z-index: 1;
+
+	}
+
+}
+.slick-slide{
+	border-radius: 20px;
+	transition: all 0.2s ease-in-out;
+	&:hover{
+		background-color: #969595;
+	}
+}
+.slick-slide.slick-current.slick-active{
+	background-color: var(--color-accent);
+	color: var(--color-text-light);
+	border-radius: 20px;
+	transition: all 0.2s ease-in-out;
+	&:hover{
+		background-color: var(--color-accent);
 	}
 }
 .dish-card {
