Готова обычная версия. НЕ ГОТОВА для GhP

--- a/src/scss/base/600.scss
+++ b/src/scss/base/600.scss
@@ -295,11 +295,11 @@
 			right: 5px;
 		}
 	}
-	.slick-slide{
+	.menu-categories__list .slick-slide{
 		border-radius: 25px;
 
 	}
-	.slick-slide.slick-current.slick-active{
+	.menu-categories__list .slick-slide.slick-current.slick-active{
 		border-radius: 25px;
 	}
 	.dish-card {
