--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,7 +33,7 @@
 /*@import './base/320';*/
 
 /*Mobile first*/
-/*@import './base/320';*/
+@import './base/320';
 /*@import './base/360';*/
 /*@import './base/480';*/
 @import './base/600';
