--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -7,6 +7,7 @@
 
 	--color-bg: #fff;
 	--color-text-light: #ffffff;
+	--color-gray-bg:#969595;
 	--color-text-dark: #141414;
 	--color-accent: #d3001f;
 	--color-hover: #ee0000;
