--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -1,5 +1,5 @@
 .slick-prev.slick-arrow.menu-categories__menu-arrow-btn,
-.slick-next.slick-arrow.menu-categories__menu-arrow-btn{
+.slick-next.slick-arrow.menu-categories__menu-arrow-btn {
 	position: absolute;
 	top: calc(50% - 14px);
 
@@ -7,14 +7,12 @@
 	height: 28px;
 	width: 28px;
 }
-.slick-next.slick-arrow.menu-categories__menu-arrow-btn{
-
+.slick-next.slick-arrow.menu-categories__menu-arrow-btn {
 	right: 2px;
-
 }
-.slick-prev.slick-arrow.menu-categories__menu-arrow-btn{
+.slick-prev.slick-arrow.menu-categories__menu-arrow-btn {
 	rotate: 180deg;
-left: 2px;
+	left: 2px;
 }
 .section-menu {
 	&__inner {
@@ -93,7 +91,6 @@ left: 2px;
 	}
 }
 
-
 .menu-categories {
 	position: relative;
 
@@ -135,8 +132,8 @@ left: 2px;
 		// &:hover{
 		// 	background-color: #969595;
 		// }
-		}
-	
+	}
+
 	// &__item--active {
 	// 	background-color: var(--color-accent);
 	// 	color: var(--color-text-light);
@@ -153,23 +150,21 @@ left: 2px;
 		@extend %font-Microsoft-Jhenghei-700;
 	}
 	&__menu-arrow-btn {
-
 	}
-
 }
-.menu-categories__list .slick-slide{
+.menu-categories__list .slick-slide {
 	border-radius: 20px;
 	transition: all 0.2s ease-in-out;
-	&:hover{
-		background-color: #969595;
+	&:hover {
+		background-color: var(--color-gray-bg);
 	}
 }
-.menu-categories__list .slick-slide.slick-current.slick-active{
+.menu-categories__list .slick-slide.slick-current.slick-active {
 	background-color: var(--color-accent);
 	color: var(--color-text-light);
 	border-radius: 20px;
 	transition: all 0.2s ease-in-out;
-	&:hover{
+	&:hover {
 		background-color: var(--color-accent);
 	}
 }
@@ -316,8 +311,8 @@ left: 2px;
 		border-radius: 8px;
 		border-bottom: 1px solid var(--color-stroke-medium);
 		transition: scale 0.2s ease-in-out;
-		
-		&:hover{
+
+		&:hover {
 			scale: 1.05;
 		}
 	}
@@ -421,6 +416,7 @@ left: 2px;
 		display: grid;
 		grid-template-columns: 1fr 79px;
 		column-gap: 15px;
+		position: relative;
 	}
 	&__counter-block {
 		border: 1px solid var(--color-stroke-dark);
@@ -435,6 +431,9 @@ left: 2px;
 	&__minus {
 		width: 100%;
 		height: 100%;
+		&:hover .dish-card__minus-icon {
+			background-color: var(--color-accent);
+		}
 	}
 	&__minus-icon {
 		margin-left: 16px;
@@ -477,13 +476,69 @@ left: 2px;
 	&__plus {
 		width: 100%;
 		height: 100%;
+		&:hover .dish-card__plus-icon {
+			background-color: var(--color-accent);
+		}
 	}
 	&__add-to-cart-btn {
 		background-color: var(--color-accent);
 		padding: 10px 24px;
 		border-radius: 10px;
+		transition: background-color 0.1s;
+		&:hover {
+			filter: drop-shadow(0 0 4px var(--color-accent));
+			transform: translate(0);
+		}
+
+		&:active {
+			background-color: var(--color-gray-bg);
+		}
+		&--active {
+			&:hover {
+				filter: none;
+			}
+			padding: 10px 24px;
+			border-radius: 10px;
+			transition: background-color 0.1s;
+			background-color: green;
+		}
+
+
+		&--active::before {
+
+			content: 'товар добавлен в корзину';
+			@extend %font-Gilroy-400;
+			position: absolute;
+			color: #fff;
+			background-color: rgba(0, 128, 0, 0.8);
+			padding: 6px;
+			border-radius: 8px;
+			width: max-content;
+			z-index: 5;
+			top: -66px;
+			right: 0;
+			animation: notice 5s linear;
+			opacity: 0;
+		}
+	}
+
+}
+
+@keyframes notice {
+	0% {
+		opacity: 0;
+	}
+	5% {
+		opacity: 1;
+	}
+	90% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
 	}
 }
+
 .svg-main--menu--cart-dims {
 	width: 25px;
 	height: 25px;
