--- a/src/scss/blocks/reviews-slider.scss
+++ b/src/scss/blocks/reviews-slider.scss
@@ -1,4 +1,10 @@
 .reviews {
+	 & .header__slider-arrows.slick-arrow{
+		z-index: -100;
+		height: 0;
+		width: 0;
+		opacity: 0;
+	}
 	& .slick-dots {
 		bottom: -22px;
 		& li {
