--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -33,8 +33,10 @@
 	}
 	&__phone {
 		display: none;
+		flex-shrink: 0;
 	}
 	&__phone-text {
+		color: #fff;
 		@extend %font-Gilroy-500;
 	}
 	&__user-tools {
@@ -144,6 +146,7 @@
 }
 .menu {
 	display: none;
+	margin-right: 10px;
 	text-transform: uppercase;
 	color: var(--color-text-light);
 	column-gap: 42px;
@@ -166,8 +169,9 @@
 	}
 	&__link {
 // position: relative;
+
 	}
-	&__text-rus {
+	&__text-rus {text-wrap: nowrap;
 		@extend %font-Gilroy-700;
 	}
 	&__text-chi {
