Правки по валидации

--- a/src/scss/blocks/map.scss
+++ b/src/scss/blocks/map.scss
@@ -2,6 +2,13 @@
 	&__inner {
 		position: relative;
 	}
+	&__title{
+		height: 0;
+		width: 0;
+		position: absolute;
+		z-index: -999;
+		opacity: 0;
+	}
 	&__ya-map-box {
 	}
 	&__switcher {
