--- a/src/scss/blocks/_features.scss
+++ b/src/scss/blocks/_features.scss
@@ -2,6 +2,13 @@
 	&__inner {
 		margin-top: 24px;
 	}
+	&__title{
+		height: 0;
+		width: 0;
+		position: absolute;
+		z-index: -999;
+		opacity: 0;
+	}
 	&__list {
 		display: grid;
 		grid-template-rows: repeat(2, 1fr);
